@@ -1,0 +1,12 @@
+
+#ifdef NO_SYS_HEADERS
+# include "xf86_ansic.h"
+#endif
+
+#include "debug.c"
+#include "decode.c"
+#include "fpu.c"
+#include "ops.c"
+#include "ops2.c"
+#include "prim_ops.c"
+#include "sys.c"
